assets/css/index.css
/* ----- Global ----- */
:root {
  color-scheme: light dark;

  --width: 60rem;

  --monospaced-font: ui-monospace, monospace;
  --text-font: -apple-system, system-ui, sans-serif;

  --body-width: 40rem;
	--body-left-margin: 2.5rem;
	--body-right-margin: 2.5rem;

  --background-color: white;
  --foreground-color: #111;
  --foreground-color-faint: #555;
  --a-color: #3273dc;
  --code-foreground-color: black;
  --code-background-color: #f0f0f0;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background-color: hsl(0, 0%, 4%);
    --foreground-color: white;
    --foreground-color-faint: #ccc;
    --a-color: hsl(200, 97%, 63%);
    --code-foreground-color: white;
    --code-background-color: #1a1a1a;
  }
}

/* ----- Responsive ----- */

@media (max-width: 640px) {
	:root {
		--body-left-margin: 1.5rem;
	  --body-right-margin: 1.5rem;
	}
}

/* ----- Layout ----- */

html {
  margin: 0;
}

body {
  max-width: var(--body-width);
  margin-left: var(--body-left-margin);
	margin-right: var(--body-right-margin);
  font-family: var(--text-font);
  text-rendering: optimizeLegibility;
	font-variant-ligatures: common-ligatures;
  background-color: var(--background-color);
  line-height: 1.45;
  color: var(--foreground-color);
}

/* ----- Header ----- */

body > header nav a { margin-right: 10px; }

#website-title {
  font-size: 1.6rem;
}
#website-title a {
  text-decoration: none;
  color: var(--foreground-color);
}

/* ----- Footer ----- */

body > footer {
  padding: 25px 0;
  font-size: small;
  max-width: 500px;

  p {
    margin-bottom: 7px;
  }

  nav a {
    padding: 0 1px;
  }

  svg {
    position: relative;
    top: 3px;
  }
}

@media (max-width: 1024px) {
	body > footer {
		text-align: center;
    margin: auto;
	}
}

/* ----- Articles ----- */

h1 {
  font-size: 1.4;
  line-height: 1;
  font-weight: 500;
  padding: 0.8rem 0 0.5rem 0;
}
h2 { padding-top: 0.75rem; font-size: 1.2rem; font-weight: 500; }
h3 { padding-top: 0.75rem; font-size: 1.1rem; font-weight: 600; }
h4 { margin-top: 0.8rem; font-size: 1rem; font-weight: 600 }

/* ----- Spans ----- */

a {
  color: var(--a-color);
}

a:link {
  color: var(--a-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

main,
footer {
  a[href*="//"]:not([href*="dvcorreia.com"]):after {
    content: "\00A0↗";
  }

  a[href^="http:"]:after {
    content: "\00A0!" !important;
  }

  a[href$=".pdf"]:after,
  a[href$=".zip"]:after,
  a[href$=".gz"]:after {
    content: "\00A0↓" !important;
  }
}

kbd {
	background-color: var(--code-background-color);
	font-family: var(--monospaced-font);
  font-weight: 600;
	font-size: 80%;
  padding: 5px 7px;
  margin: 0 0.2rem;
}

/* ----- Blocks ----- */

article ul li { list-style-type: '-  '; }
article ul::marker { font-size: 0.9rem; }
img { max-width: calc(100% - 0.5rem); }
figure { margin: 0; }

table {
  width: 100%;
}

img {
  max-width: 100%;
}

pre {
	padding: 0.85rem 1rem;
	font-size: 0.85rem;
}

.highlight div,
.highlight pre {
  overflow-x: auto;
}

blockquote {
  border-left: 1px solid var(--foreground-color-faint);
  color: var(--foreground-color-faint);
  padding-left: 20px;
  font-style: italic;
}

/* ----- Blog posts list ----- */
ul.blog-posts {
  list-style-type: none;
  padding: unset;
}

ul.blog-posts li {
  display: flex;
}

ul.blog-posts li span {
  flex: 0 0 130px;
}

